// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codes reducer should CREATE_LANGUAGE_CODE_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isCreatePending": false,
  "isError": false,
  "isPending": false,
  "languageCode": Object {
    "id": "id",
  },
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should CREATE_LANGUAGE_CODE_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isCreateError": false,
  "isCreatePending": true,
  "isError": false,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should CREATE_LANGUAGE_CODE_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isCreateError": true,
  "isCreatePending": false,
  "isError": false,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should DEPRECATE_LANGUAGE_CODE_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should DEPRECATE_LANGUAGE_CODE_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should DEPRECATE_LANGUAGE_CODE_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should GET_LANGUAGE_CODE_BY_ID_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "languageCode": Object {},
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should GET_LANGUAGE_CODE_BY_ID_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should GET_LANGUAGE_CODE_BY_ID_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should GET_LANGUAGE_CODES_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "languageCode": null,
  "languageCodeCount": 10,
  "languageCodeList": Object {},
}
`;

exports[`codes reducer should GET_LANGUAGE_CODES_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should GET_LANGUAGE_CODES_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should UNDEPRECATE_LANGUAGE_CODE_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should UNDEPRECATE_LANGUAGE_CODE_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should UNDEPRECATE_LANGUAGE_CODE_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should return the initial state 1`] = `
Object {
  "errorMessage": "",
  "isCreateError": false,
  "isCreatePending": false,
  "isError": false,
  "isPending": false,
  "languageCode": null,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
  "sortField": "code",
  "sortOrder": "asc",
  "sortValue": "code",
}
`;
